--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -47,20 +47,20 @@
 <!ENTITY Ctr_tabwidthinfo	"Die Minimal- und Maximalbreite von Tabs wird von 'TabMixPlus' kontrolliert">
 <!ENTITY Ctr_tabwidthinfo2	"Die Minimal- und Maximalbreite von Tabs wird von 'TabUtilities' kontrolliert">
 <!ENTITY Ctr_tabwidthinfo3	"Werte unter 48px sorgen meistens für eine fehlerhafte Darstellung!">
-<!ENTITY Ctr_tabinsertion	"Verwandten Tab nach aktuellem Tab einfügen (about:config)">
+<!ENTITY Ctr_tabinsertion	"Verwandten Tab nach aktuellem Tab einfügen (about:config Einstellung)">
 <!ENTITY Ctr_emptyfavicon	"Leeres Lesezeichensymbol auf Tabs wiederherstellen">
 <!ENTITY Ctr_noemptypticon	"Leeres Lesezeichensymbol auf angehefteten Tabs verstecken">
-<!ENTITY Ctr_e10stab_notd	"E10s Tabs: Unterstrich entfernen">
+<!ENTITY Ctr_e10stab_notd	"E10s Tabs: Unterstreichung entfernen">
 <!ENTITY Ctr_closetab_0		"'Tab schließen'">
 <!ENTITY Ctr_closetab_1		"Nur auf dem aktiven Tab">
 <!ENTITY Ctr_closetab_2		"Nirgends (deaktiviert)">
 <!ENTITY Ctr_closetab_3		"Am Ende der Tableiste">
 <!ENTITY Ctr_closetab_4		"Am Anfang der Tableiste">
 <!ENTITY Ctr_closetab_5		"Auf allen Tabs erzwingen">
-<!ENTITY Ctr_closetab_hfot	"Ausgeblendet bei nur einem sichtbaren Tab">
-<!ENTITY Ctr_closealt		"Rotes Schließen-Symbol">
+<!ENTITY Ctr_closetab_hfot	"Versteckt bei nur einem sichtbaren Tab">
+<!ENTITY Ctr_closealt		"Alternatives Schließen-Symbol">
 <!ENTITY Ctr_closeonleft	"Am Anfang des Tabs">
-<!ENTITY Ctr_close_wwltab	"Schließt Fenster mit nur einem sichtbaren Tab (about:config)">
+<!ENTITY Ctr_close_wwltab	"Schließt Fenster mit nur einem sichtbaren Tab (about:config Einstellung)">
 
 <!ENTITY Ctr_appbutton		"Firefox-Schaltfläche">
 <!ENTITY Ctr_appbutton0		"Deaktiviert">
@@ -226,7 +226,7 @@
 <!ENTITY Ctr_addonbarfs		"Im 'Vollbild'-Modus">
 
 <!ENTITY Ctr_animation		"Animationen">
-<!ENTITY Ctr_throbberalt	"Alternative Ladeanzeige auf Tabs">
+<!ENTITY Ctr_throbberalt	"Alternative Ladeanzeige">
 <!ENTITY Ctr_bmanimation	"'Lesezeichen hinzufügen'">
 <!ENTITY Ctr_pananimation	"'Panel-Aufklappmenü öffnen'">
 <!ENTITY Ctr_tabanimation	"'Tab schließen und öffnen' (about:config Einstellung)">
