--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -41,13 +41,13 @@
 <!ENTITY Ctr_tabwidthdef	"(προεπιλογή)">
 <!ENTITY Ctr_tabwidthcla	"(κλασικό)">
 <!ENTITY Ctr_tabminheight	"Ύψος:">
-<!ENTITY Ctr_tabheightinfo	"Low values will cause glitches in maximized mode!">
+<!ENTITY Ctr_tabheightinfo	"Χαμηλές τιμές θα προκαλέσουν δυσλειτουργίες σε λειτουργία μεγιστοποίησης!">
 <!ENTITY Ctr_tabmaxwidth	"Μέγιστο εύρος:">
 <!ENTITY Ctr_tabminwidth	"Ελάχιστο εύρος:">
 <!ENTITY Ctr_tabwidthinfo	"Το εύρος καρτελών ελέγχεται από την επέκταση «TabMixPlus»">
 <!ENTITY Ctr_tabwidthinfo2	"Το εύρος καρτελών ελέγχεται από την επέκταση «TabUtilities»">
 <!ENTITY Ctr_tabwidthinfo3	"Τιμές κάτω από 48px θα προκαλέσουν δυσλειτουργίες στις περισσότερες περιπτώσεις!">
-<!ENTITY Ctr_tabinsertion	"Insert related tab after current tab (about:config)">
+<!ENTITY Ctr_tabinsertion	"Εισαγωγή συναφούς καρτέλας μετά την τρέχουσα καρτέλα (about:config)">
 <!ENTITY Ctr_emptyfavicon	"Επαναφορά κενού εικονιδίου (εάν ένας ιστότοπος δεν διαθέτει εικονίδιο)">
 <!ENTITY Ctr_noemptypticon	"Αφαίρεση κενού εικονιδίου από καρτέλες εφαρμογών">
 <!ENTITY Ctr_e10stab_notd	"Καρτέλες E10s: αφαίρεση υπογράμμισης">
@@ -67,7 +67,7 @@
 <!ENTITY Ctr_appbutton1		"Στην εργαλειοθήκη">
 <!ENTITY Ctr_appbutton1wt	"Στην εργαλειοθήκη (μόνο κείμενο)">
 <!ENTITY Ctr_appbutton2		"Στη γραμμή τίτλου [Firefox]">
-<!ENTITY Ctr_appbutton2h	"Στη γραμμή τίτλου [Firefox] (hidden)">
+<!ENTITY Ctr_appbutton2h	"Στη γραμμή τίτλου [Firefox] (σε απόκρυψη)">
 <!ENTITY Ctr_appbutton2io	"Στη γραμμή τίτλου [Firefox] (μόνο εικονίδιο)">
 <!ENTITY Ctr_paneluibtweak	"Πορτοκαλί κουμπί μενού πίνακα στην εργαλειοθήκη καρτελών">
 <!ENTITY Ctr_appbuttonc_o	"Πορτοκαλί χρώμα κουμπιού (προεπιλογή)">
@@ -128,7 +128,7 @@
 <!ENTITY Ctr_cpanelmenus	"Μενού πίνακα: συνεπτυγμένη προβολή (σελιδοδείκτες, ιστορικό κλπ.)">
 <!ENTITY Ctr_hidezoomres	"Στοιχεία ελέγχου μεγέθυνσης σε εργαλειοθήκη: απόκρυψη κουμπιού επεναφοράς επιπέδου μεγέθυνσης">
 <!ENTITY Ctr_alt_newtabp	"Σελίδα νέας καρτέλας: εναλλακτική εμφάνιση">
-<!ENTITY Ctr_noresizerxp	"Hide Resizer (Windows XP)">
+<!ENTITY Ctr_noresizerxp	"Απόκρυψη λαβής αλλαγής μεγέθους του παραθύρου (Windows XP)">
 <!ENTITY Ctr_pmhidelabels	"Μενού πίνακα: απόκρυψη ετικετών κουμπιών">
 <!ENTITY Ctr_menupopupscr	"Αναδυόμενα μενού: εμφάνιση γραμμών κύλισης αντί για βέλη κύλισης">
 
@@ -204,7 +204,7 @@
 <!ENTITY Ctr_notabbg		"Αφαίρεση χρώματος φόντου (Windows AeroGlass/8)">
 <!ENTITY Ctr_hightabpos		"Μείωση χώρου πάνω από την εργαλειοθήκη (εάν είναι δυνατόν)">
 <!ENTITY Ctr_alttabstb		"Εναλλακτικό χρώμα φόντου">
-<!ENTITY Ctr_alttabstb2		"In maximized mode (tabs on top)">
+<!ENTITY Ctr_alttabstb2		"Σε λειτουργία μεγιστοποίησης (καρτέλες στο πάνω μέρος)">
 
 <!ENTITY Ctr_altmenubar		"Προσθήκη χρώματος φόντου (γραμμή τίτλου Λ.Σ.)">
 <!ENTITY Ctr_altmenubarpos	"Εναλλακτική θέση (παρακάτω από τη γραμμή τίτλου του Firefox)">
@@ -214,8 +214,8 @@
 <!ENTITY Ctr_hidenavbar		"Εργαλειοθήκη πλοήγησης: απόκρυψη εργαλειοθήκης">
 <!ENTITY Ctr_nobookbarbg	"Εργαλειοθήκη σελιδοδεικτών: αφαίρεση χρώματος φόντου">
 <!ENTITY Ctr_nonavbarbg		"Εργαλειοθήκη πλοήγησης: αφαίρεση χρώματος φόντου">
-<!ENTITY Ctr_nonavbarbg1	"This add-on's additional toolbars and other top toolbars are affected.">
-<!ENTITY Ctr_nonavbarbg2	"All toolbars in 'The Fox, Only Better' add-on's Slim Chrome are affected.">
+<!ENTITY Ctr_nonavbarbg1	"Επηρεάζονται επίσης οι επιπρόσθετες εργαλειοθήκες αυτής της επέκτασης και άλλες εργαλειοθήκες κορυφής.">
+<!ENTITY Ctr_nonavbarbg2	"Επηρεάζονται όλες οι εργαλειοθήκες σε λειτουργία «Slim Chrome» της επέκτασης «The Fox, Only Better».">
 <!ENTITY Ctr_nonavborder	"Εργαλειοθήκη σελιδοδεικτών: προσθήκη περιγράμματος κορυφής στην εργαλειοθήκη">
 <!ENTITY Ctr_nonavtbborder	"Εργαλειοθήκες κορυφής: αφαίρεση περιγραμμάτων εργαλειοθήκης">
 <!ENTITY Ctr_hidesbclose	"Πλευρικές στήλες: απόκρυψη κουμπιού κλεισίματος πλευρικής στήλης">
@@ -223,10 +223,10 @@
 
 <!ENTITY Ctr_closeabarbut	"Απόκρυψη κουμπιού κλεισίματος εργαλειοθήκης πρόσθετων">
 <!ENTITY Ctr_highaddonsbar	"Αύξηση ύψους">
-<!ENTITY Ctr_addonbarfs		"In fullscreen mode">
+<!ENTITY Ctr_addonbarfs		"Σε προβολή πλήρους οθόνης">
 
 <!ENTITY Ctr_animation		"Κινησιομοίωση">
-<!ENTITY Ctr_throbberalt	"Εναλλακτική κινησιομοίωση ενδεικτικού φόρτωσης στις καρτέλες">
+<!ENTITY Ctr_throbberalt	"Εναλλακτική εμφάνιση φόρτωσης">
 <!ENTITY Ctr_bmanimation	"Κινησιομοίωση προσθήκης σελιδοδείκτη">
 <!ENTITY Ctr_pananimation	"Κινησιομοίωση ανοίγματος μενού πίνακα">
 <!ENTITY Ctr_tabanimation	"Κινησιομοίωση κλεισίματος/ανοίγματος καρτέλας (προτίμηση about:config)">
@@ -246,8 +246,8 @@
 <!ENTITY Ctr_fx33layers		"Ο Firefox 33+ εισήγαγε «νέα χαρακτηριστικά απόδοσης», τρεχόντως υπεύθυνα για το «κρέμασμα καρτελών» σε ορισμένα συστήματα. Αποεπιλέγοντας αυτή την προτίμηση επιλύεται αυτό το ζήτημα.">
 <!ENTITY Ctr_fx34search		"Ο Firefox 34+ εισήγαγε μία «νέα διεπαφή αναζήτησης». Αποεπιλέγοντας αυτή την προτίμηση επαναφέρεται η προηγούμενη διεπαφή.">
 <!ENTITY Ctr_fx34loop		"Ο Firefox 34+ εισήγαγε δυνατότητες «κλήσης και συνομιλίας». Αποεπιλέγοντας αυτή την προτίμηση αφαιρούνται αυτές οι δυνατότητες.">
-<!ENTITY Ctr_fx35devtheme	"Firefox 35+ introduced a new 'developer theme'. Unchecking these preferences disables the 'developer theme' and its button in customizing mode.">
-<!ENTITY Ctr_fx36prefs		"Firefox 36+ introduced preferences in a tab. Unchecking this preference restores the old preference window.">
+<!ENTITY Ctr_fx35devtheme	"Ο Firefox 35+ εισήγαγε ένα νέο «Θέμα δημιουργού». Αποεπιλέγοντας αυτές τις προτιμήσεις απενεργοποιούνται το «Θέμα δημιουργού» και το κουμπί του στη λειτουργία προσαρμογής.">
+<!ENTITY Ctr_fx36prefs		"Ο Firefox 36+ εισήγαγε προβολή επιλογών σε καρτέλα. Αποεπιλέγοντας αυτή την προτίμηση επαναφέρεται το παλιό παράθυρο επιλογών.">
 
 
 <!ENTITY Ctr_pw_settings	"Ρυθμίσεις">
