--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -125,7 +125,7 @@
 <!ENTITY Ctr_nav_txt_ico3	"Prikaži samo besedilo">
 <!ENTITY Ctr_nav_txt_exp	"Preskusni atributi:">
 <!ENTITY Ctr_iat_notf_vt	"Izključi navpične orodne vrstice">
-<!ENTITY Ctr_cpanelmenus	"Ploščasti meniji: strnjen pogled (zaznamki, zgodovina itd.)">
+<!ENTITY Ctr_cpanelmenus	"Ploščasti meniji: strnjen pogled (Zaznamki, Zgodovina itd.)">
 <!ENTITY Ctr_hidezoomres	"Nadzorni gumbi za povečavo na orodni vrstici: skrij gumb za ponastavitev povečave">
 <!ENTITY Ctr_alt_newtabp	"Stran novega zavihka: nadomestni videz">
 <!ENTITY Ctr_noresizerxp	"Skrij spremenilnik velikosti (Windows XP)">
